--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog-backend",
+  "name": "backend-blog-app",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -11,9 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.0.3",
     "esm": "^3.2.25",
-    "express": "^4.19.2",
-    "mongoose": "^8.3.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.12.8"
   }
 }
